--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,12 @@ html {
 body {
   min-height: 100vh;
   width: 100%;
+  background-image: linear-gradient(
+    to top,
+    #ff9a9e 0%,
+    #fecfef 99%,
+    #fecfef 100%
+  );
 }
 
 img {
@@ -42,25 +48,83 @@ li {
   display: grid;
 }
 
-.App{
-    margin: 2rem 0;
+.App {
+  margin: 3rem 0;
+
+  h2 {
+    text-align: center;
+    font-size: 1.3rem;
+  }
 }
 
-.form{
-    justify-content: center;
+.form {
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 1rem;
+
+  input {
+    border: none;
+    padding: 0.5rem;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 1rem;
+    transition: 0.2s;
+
+    &:focus {
+      outline: thick double #fccb90;
+    }
+  }
+
+  button {
+    border: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.85rem;
+    background-image: linear-gradient(120deg, #fccb90 0%, #d57eeb 100%);
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    color: white;
+    transition: 0.2s;
+
+    &:focus {
+      outline: thick double #fccb90;
+    }
+
+    &:hover {
+      opacity: 0.75;
+    }
+  }
 }
 
-.recipe-container{
+.recipes-container {
+  .recipes {
     align-items: center;
     margin-top: 4rem;
     text-align: center;
 
-    h1{
-        font-size: 1.5rem;
+    h1 {
+      font-size: 1.5rem;
     }
 
-    img{
-        width: 10rem;
-        margin-top: 1rem;
+    img {
+      width: 17rem;
+      margin-top: 1rem;
+      border-radius: 50%;
     }
+
+    ul {
+      margin-top: 1.25rem;
+      padding: 0 1rem;
+    }
+    p {
+      margin-top: 1rem;
+    }
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .recipes-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: stretch;
+  }
 }
